[package]
edition = "2018"
name = "uuidgen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcodegen = "1.7.0"
reqwest = {version = "0.11.4", features = ["json", "blocking"]}
serde = {version = "1.0.127", features = ["derive"]}
